java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119a.pass
package org.netbeans.test.java.hints;

import java.awt.Rectangle;
import javax.swing.SwingUtilities;

/**
 * @author leon chiver
 */
public class IncorrectType58119a {

    private Rectangle c;
    
    public void doStuff1() {
        c = SwingUtilities.calculateInnerArea(null, null);
    }
    
}
